[fix] svg issue: white space not cleaned

--- a/mkdocs_mathenv_plugin/css/svg.css
+++ b/mkdocs_mathenv_plugin/css/svg.css
@@ -2,6 +2,14 @@ path[stroke="#000"] {
 	stroke: var(--md-default-fg-color);
 }
 
+path[stroke="#fff"] {
+	stroke: var(--md-default-bg-color);
+}
+
+path[fill="#fff"] {
+	fill: var(--md-default-bg-color);
+}
+
 path:not([fill]) {
 	fill: var(--md-default-fg-color);
 }
